--- a/configuration.org
+++ b/configuration.org
@@ -48,8 +48,6 @@ down in this file, some are used with the default configuration.
                         flycheck
                         auto-complete
                         web-mode
-                        elfeed
-                        elfeed-goodies
                         exec-path-from-shell
                         js2-mode
                         js2-refactor
@@ -57,6 +55,7 @@ down in this file, some are used with the default configuration.
                         ini-mode
                         comment-tags
                         sass-mode
+                        pug-mode
                         yaml-mode
                         pdf-tools
                         tern
@@ -67,6 +66,7 @@ down in this file, some are used with the default configuration.
                         restclient
                         magit
                         which-key
+                        git-link
                         writeroom-mode
                         writegood-mode))
 #+END_SRC
@@ -519,10 +519,17 @@ A JavaScript refactoring library for Emacs.
 
   (add-hook 'js-mode-hook 'js2-minor-mode)
   (setq js2-highlight-level 3)
-  (setq js-indent-level 2)
+  (setq js-indent-level 4)
   ;; Semicolons are optional in JS, do not warn about them missing
   (setq js2-strict-missing-semi-warning nil)
 
+#+END_SRC
+
+** PugMode
+*** Configuration
+
+#+BEGIN_SRC emacs-lisp
+  (add-hook 'pug-mode-hook (lambda () setq tab-width 4))
 #+END_SRC
 
 ** Web
@@ -603,6 +610,21 @@ Create shortcut for =Magit=.
 
 #+BEGIN_SRC emacs-lisp
   (global-set-key (kbd "C-x g") 'magit-status)
+#+END_SRC
+
+** git-link
+
+https://github.com/sshaw/git-link
+
+Quickly create links to remote repositories.
+
+*** Configuration
+
+Enable git-link globally and bind to (=C-cgl)
+
+#+BEGIN_SRC emacs-lisp
+  (setq git-link-default-remote "upstream")
+  (global-set-key "\C-cgl" 'git-link)
 #+END_SRC
 
 ** Projectile
