--- a/configuration.org
+++ b/configuration.org
@@ -46,6 +46,8 @@ down in this file, some are used with the default configuration.
   (defvar my-packages '(ag
                         browse-kill-ring
                         flycheck
+                        flycheck-rust
+                        flx-ido
                         auto-complete
                         web-mode
                         exec-path-from-shell
@@ -63,6 +65,7 @@ down in this file, some are used with the default configuration.
                         projectile
                         markdown-mode
                         restclient
+                        rust-mode
                         magit
                         which-key
                         git-link
@@ -300,7 +303,6 @@ capable counterparts
 
 #+BEGIN_SRC emacs-lisp
   (add-hook 'org-mode-hook 'which-key-mode)
-  (add-hook 'cider-mode-hook 'which-key-mode)
 #+END_SRC
 
 * Programming
@@ -631,6 +633,18 @@ Enable Projectile globally
 
 #+BEGIN_SRC emacs-lisp
   (projectile-global-mode)
+  (projectile-register-project-type 'npm '("package.json")
+      :test "npm test"
+      :test-suffix "Test")
+#+END_SRC
+
+** Rust
+
+*** Flycheck rust
+
+#+BEGIN_SRC emacs-lisp
+  (with-eval-after-load 'rust-mode
+      (add-hook 'flycheck-mode-hook #'flycheck-rust-setup))
 #+END_SRC
 
 * org-mode
