--- a/configuration.org
+++ b/configuration.org
@@ -1,7 +1,5 @@
 #+TITLE: Emacs configuration
-#+AUTHOR: Alain M. Lafon
-#+EMAIL: alain@200ok.ch
-
+#+AUTHOR: Stephen Bradley (adapted from Alain M. Lafon, alain@200ok.ch)
 
 This repository contains my Emacs configuration. It is written and
 documented in literate programming style.
@@ -629,13 +627,31 @@ p=).
 
 *** Configuration
 
-Enable Projectile globally
-
+Enable Projectile globally.
 #+BEGIN_SRC emacs-lisp
   (projectile-global-mode)
-  (projectile-register-project-type 'npm '("package.json")
-      :test "npm test"
-      :test-suffix "Test")
+#+END_SRC
+
+Register npm project type.
+#+BEGIN_SRC emacs-lisp
+  (projectile-register-project-type
+   'npm '("package.json")
+   :test "npm test"
+   :test-suffix "Test")
+#+END_SRC
+
+Wrap 'projectile-find-implementation-or-test' to cache looked-up
+files.
+#+BEGIN_SRC emacs-lisp
+  (defvar projectile-projects-impl-test-cache (make-hash-table :test 'equal))
+  (defun cache-impl-test-files (orig-fun &rest args)
+    (let ((cached-assoc-file (gethash (car args) projectile-projects-impl-test-cache)))
+      (if cached-assoc-file
+          cached-assoc-file
+        (let ((res (apply orig-fun args)))
+          (puthash (car args) (projectile-expand-root res) projectile-projects-impl-test-cache)
+          res))))
+  (advice-add 'projectile-find-implementation-or-test :around #'cache-impl-test-files)
 #+END_SRC
 
 ** Rust
