--- a/configuration.org
+++ b/configuration.org
@@ -645,7 +645,7 @@ Allow ‘a.’, ‘A.’, ‘a)’ and ‘A) as list elements:
   (org-babel-do-load-languages
    'org-babel-load-languages
    '(
-     (sh . t)
+     (shell . t)
      (js . t)
      ))
 
