fix projectile mode

--- a/configuration.org
+++ b/configuration.org
@@ -579,7 +579,9 @@ p=).
 
 Enable Projectile globally.
 #+BEGIN_SRC emacs-lisp
-  (projectile-global-mode)
+  (projectile-mode +1)
+  (define-key projectile-mode-map (kbd "s-p") 'projectile-command-map)
+  (define-key projectile-mode-map (kbd "C-c p") 'projectile-command-map)
 #+END_SRC
 
 Register npm project type.
